tests/baselines/reference/moduleCodeGenTest3.errors.txt
moduleCodeGenTest3.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleCodeGenTest3.ts (1 errors) ====
    module Baz { export var x = "hello"; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    Baz.x = "goodbye";